<resources>
    <string name="app_name">SuperHeroInfo</string>
    <string name="hero_photo_text">hero photo</string>
    <string name="intelligence_text">Intelligence:</string>
    <string name="speed_text">Speed</string>
    <string name="durability_text">Durability</string>
    <string name="power_text">Power</string>
    <string name="combat_text">Combat</string>
    <string name="strength_text">Strength</string>
    <string name="hero_name_text">hero name</string>
    <string name="error_text">Error</string>
    <string name="symbol_text">/</string>
    <string name="success_text">success</string>
</resources>